# tap-oss

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  SECURITY.md  docker-compose.local.yaml  docker-compose.yaml  local.env.example
.github/workflows/: ci.yaml
crates/tap-bot/: Cargo.toml
crates/tap-bot/src/: config.rs  lib.rs  matrix.rs  telegram.rs
crates/tap-cli/: Cargo.toml
crates/tap-cli/src/: add.rs  agent_cmd.rs  auth.rs  channel_cmd.rs  cred.rs  init.rs  logs.rs  main.rs  recipe.rs  role_cmd.rs
crates/tap-core/: Cargo.toml
crates/tap-core/src/: approval.rs  auth.rs  config.rs  error.rs  grants.rs  http_client.rs  lib.rs  mcp_tokens.rs  policy_diff.rs  store.rs  summary.rs  types.rs
crates/tap-mcp/: Cargo.toml  README.md
crates/tap-mcp/src/: lib.rs  main.rs
crates/tap-proxy/: Cargo.toml  build.rs  credentials-catalog.json  recipes.json
crates/tap-proxy/src/: admin.rs  agent_reflected_channel.rs  analytics.rs  app.rs  audit.rs  auth.rs  aws_sigv4.rs  credential_hints.rs  credential_verify.rs  crypto.rs  dashboard_channel.rs  db_state.rs  email.rs  forward.rs  github_login.rs  google_login.rs  google_oauth.rs  key_provider.rs  key_provider_enclave.rs  kms_azure.rs  lib.rs  main.rs  mcp_auth.rs  mcp_internal.rs  microsoft_oauth.rs  oauth.rs  oauth1.rs  oauth_client_credentials.rs  placeholder.rs  policy.rs  proposals.rs  proxy.rs  push.rs  recipes.rs  relay.rs  routing.rs  safety.rs  sanitize.rs  signing.rs  skr.rs  (+3 more)
crates/tap-proxy/static/: approve.html  dashboard-sw.js  register.html
crates/tap-proxy/tests/: e2e.rs  integration.rs
deploy/: nginx.conf
docs/: package-lock.json  package.json  theme.config.tsx
docs/pages/: _app.tsx  _meta.ts  credential-setup.mdx  deployment.mdx  examples.mdx  how-it-works.mdx  index.mdx  policies.mdx  proxy-api.mdx  quickstart.mdx  security.mdx  team.mdx
measurements/: README.md  production.jsonl  staging.jsonl
scripts/: telegram_sidecar.py
