[workspace]
resolver = "2"
members = [
    "crates/tap-core",
    "crates/tap-proxy",
    "crates/tap-bot",
    "crates/tap-cli",
    "crates/tap-mcp",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
