[package]
name = "tap-bot"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tap-core = { path = "../tap-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

[dev-dependencies]
axum = "0.8"
# Enable ConfigStore::new_isolated_test for the grant callback/reaction tests.
tap-core = { path = "../tap-core", features = ["test-support"] }
