[package]
name = "tap-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = "2"
async-trait = "0.1"
base64 = "0.22"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tracing = { workspace = true }

[features]
# Exposes ConfigStore::new_isolated_test for downstream test suites (the proxy's
# integration/e2e tests). No effect on the production build.
test-support = []

[dev-dependencies]
tempfile = "3"
