[package]
name = "tap-proxy"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tap-core = { path = "../tap-core" }
tap-bot = { path = "../tap-bot" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
axum = "0.8"
hyper-util = { version = "0.1", features = ["tokio"] }
# gzip/brotli/deflate enable transparent response decompression so the proxy
# sanitizer (UTF-8 text scan) sees the decoded body — otherwise a compressed
# reflected secret bypasses redaction. reqwest also strips Content-Encoding/
# Content-Length from the decoded response, so the forwarded headers stay
# consistent with the decoded body.
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate"] }
aes-gcm = "0.10"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
# Cryptographic signing-key credentials (the `/sign` endpoint). secp256k1 via
# k256 (recoverable ECDSA for EVM/Bitcoin), NIST P-256 via p256, and ed25519 via
# ed25519-dalek. All RustCrypto, sharing the rand_core 0.6 / sha2 already pulled
# in, so no second crypto backend is introduced.
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
p256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
percent-encoding = "2"
rand = "0.8"
regex = "1"
base64 = "0.22"
tower-http = { version = "0.6", features = ["trace", "cors", "catch-panic"] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
hyper = { version = "1", features = ["client", "http1"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
libsql = "0.9"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
url = "2"
argon2 = "0.5"
anyhow = "1"
# In-enclave TLS termination (internal-docs#1188). rustls-acme drives ACME (TLS-ALPN-01)
# and ships the cert resolver; axum-server provides the TLS-accepting serve loop via the
# `axum` feature. `ring` (not aws-lc-rs) matches the rustls 0.23 provider already in the
# lock, so no second crypto backend is pulled in. default-features disabled to drop the
# aws-lc-rs default.
rustls-acme = { version = "0.15", default-features = false, features = ["ring", "tls12", "webpki-roots", "axum", "tokio"] }
axum-server = { version = "0.8", default-features = false }
futures = "0.3"
# Pin fs-err < 3.1: axum-server pulls fs-err transitively, and fs-err >= 3.1 calls the
# std `file_lock` API which only became usable on the toolchain shipped after this repo's
# nightly (built 2025-05-30). 3.0.x predates those calls and builds cleanly. Remove this
# pin once the toolchain is bumped past Rust 1.89 stable.
fs-err = "=3.0.0"
# RSA (KEK) unwrap for the Azure SKR backend. Only compiled into enclave builds
# (the `azure-skr` backend lives under --features enclave); standard builds skip it.
rsa = { version = "0.9", optional = true }
# Web Push (RFC 8291 encryption + RFC 8292 VAPID) for the dashboard approval
# channel. default-features=false drops the bundled isahc/libcurl client — we
# build the encrypted message and POST it via the existing reqwest client.
web-push = { version = "0.11", default-features = false }

[features]
default = []
# Enclave mode: key from the KMS backend selected by TAP_KMS_BACKEND.
#   - `evervault` (default): key sealed/unsealed via Evervault /encrypt + /decrypt.
#   - `azure-skr`: KEK released by the colocated SKR sidecar unwraps the DEK locally (RSA-OAEP).
enclave = ["dep:rsa"]

[dev-dependencies]
tempfile = "3"
tower = "0.5"
tokio = { workspace = true, features = ["full", "test-util"] }
# Enable ConfigStore::new_isolated_test for the integration/e2e suites so each
# test gets its own database and the suites can run in parallel.
tap-core = { path = "../tap-core", features = ["test-support"] }
